--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Wakkaba/Wakkaba.github.io",
+  "homepage": "https://Wakkaba.github.io/ValidationTask",
   "name": "untitled1",
   "version": "0.1.0",
   "private": true,
